--- a/css/style.css
+++ b/css/style.css
@@ -122,13 +122,24 @@ p5 {
 .Adderall {
     background-color: #EBFFFE;
 }
-.description-tab {
+.description-tab1, .description-tab2, .description-tab3 {
     font-size: 18px;
     font-weight: 600;
     border-radius: 12px;
     padding: 10px;
     background-color: white;
     color: black;
+    width: 330px;
+   margin: 9.5px;
+   margin-top: 25px;
+}
+.highlight {
+    font-size: 18px;
+    font-weight: 600;
+    border-radius: 12px;
+    padding: 10px;
+    background-color: #0080A6;
+    color: white;
     width: 330px;
    margin: 9.5px;
    margin-top: 25px;
@@ -157,9 +168,10 @@ p5 {
 .DrugDrugd {
     display: inline-grid;
     grid-template-columns: 450px;
-    grid-template-rows: 280px 280px 230px;
+    grid-template-rows: 300px 230px 230px;
+    align-items: center;
     font-size: 18px;
-    line-height: 26px;
+    line-height: 24px;
     position: absolute;
     right: 600px;
 }
@@ -169,7 +181,7 @@ p5 {
     margin-right: 100px;
     font-size: 18px;
     line-height: 26px;
-    margin-top: 50px;
+    margin-top: 20px;
 }
 
 /* Sign-Up Page */
@@ -409,6 +421,28 @@ h10 {font-weight: 600; font-size: 21px;}
     padding-right: 100px;
     padding-top: 3.5%;
     padding-bottom: 3.5%;
+}
+.description-tab4, .description-tab5, .description-tab6 {
+    font-size: 18px;
+    font-weight: 600;
+    border-radius: 12px;
+    padding: 10px;
+    background-color: white;
+    color: black;
+    width: 330px;
+   margin: 9.5px;
+   margin-top: 25px;
+}
+.highlight {
+    font-size: 18px;
+    font-weight: 600;
+    border-radius: 12px;
+    padding: 10px;
+    background-color: #0080A6;
+    color: white;
+    width: 330px;
+   margin: 9.5px;
+   margin-top: 25px;
 }
 .coupon1,.coupon2 {
     border-style: solid;
